--- a/greeting.html
+++ b/greeting.html
@@ -6,6 +6,7 @@
 
   <body>
     <div id="app"></div>
+    <div id='content'></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
@@ -23,6 +24,21 @@
       ReactDOM.render(
         <Greeting />, document.getElementById('app')
       );
+
+      class Message extends React.Component {
+        render() {
+          return(
+            <div>
+              <h2>Props will go here</h2>
+            </div>
+          );
+        }
+      }
+
+      ReactDOM.render(
+        <Message />, document.getElementById('content')
+      );
+
     </script>
   </body>
 
