--- a/greeting.html
+++ b/greeting.html
@@ -11,15 +11,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script type="text/babel">
       class Greeting extends React.Component {
+
+        constructor(props){
+          super(props);
+          this.state = {date:new Date()};
+        }
+
         render() {
           return(
             <div>
               <h1>Hello {this.props.name}!</h1>
+              <h2>It is {this.state.date.toLocaleDateString()}.</h2>
             </div>
           );
         }
       }
-
       ReactDOM.render(
         <Greeting name="Blco Student"/>, document.getElementById('app')
       );
